# sqlite-wasm-demo

./: .gitignore  Cargo.toml  README.md  sqlite-browser-arch.md  worker.js
crates/browser_sqlite/: Cargo.toml
crates/browser_sqlite/src/: lib.rs
crates/sqlite_wrapper/: Cargo.toml
crates/sqlite_wrapper/src/: lib.rs
crates/tab_coordinator/: Cargo.toml
crates/tab_coordinator/src/: lib.rs
crates/tab_coordinator_shared_worker/: Cargo.toml
crates/tab_coordinator_shared_worker/src/: lib.rs
demo/: build.sh  index.html  server.py  sqlite-worker-append.js  tab-coordinator-append.js  worker-append.js
my-example/: .gitignore
my-example/.github/workflows/: ci.yml
my-example/src/: connection_pool.rs  lib.rs  worker_tests.rs
src/: coordinator.rs  coordinator_tests.rs  lib.rs  opfs_tests.rs
worker/: Cargo.toml
worker/src/: lib.rs
