[workspace]
members = [
    "crates/tab_coordinator",
    "crates/tab_coordinator_shared_worker",
    "crates/sqlite_wrapper",
    "crates/browser_sqlite"
]
resolver = "2"

# Shared workspace dependencies
[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = "0.3"
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "js"] }