[package]
name = "sqlite-wasm-coordinator-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "SharedWorkerGlobalScope",
    "MessageEvent",
    "MessagePort",
    "Event",
    "EventTarget",
    "console"
]}
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid = { version = "1.7", features = ["v4", "js"] } 