[package]
name = "browser_sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tab_coordinator = { path = "../tab_coordinator" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "Worker",
    "MessageEvent"
]}
js-sys = { workspace = true }
sqlite_wrapper = { path = "../sqlite_wrapper" } 