[package]
name = "tab_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "MessagePort",
    "SharedWorker",
    "MessageEvent",
    "console"
]}
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
wasm-bindgen-futures = "0.4" 