[package]
name = "tab_coordinator_shared_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "MessagePort",
    "MessageEvent",
    "console"
]}
js-sys = { workspace = true }
uuid = { workspace = true } 